// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BetResultsInfo renders winning wheel numbers with different color backgrounds (0 -> green) 1`] = `
<div
  className="BetResultsInfo-component"
>
  <div
    className="bet-info-table-title-container"
  >
    <div
      className="bet-info-table-title-text"
    >
      PREVIOUS ROUND RESULTS
    </div>
    <div
      className="bet-info-table-title-spin-result"
      style={
        Object {
          "backgroundColor": "#016D29",
        }
      }
    >
      0
    </div>
  </div>
  <table
    className="bet-results-info-table"
  >
    <tbody>
      <tr
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        <th>
          Bet Name
        </th>
        <th>
          Bet Amount
        </th>
        <th>
          Winnings
        </th>
        <th>
          Bet Returned
        </th>
      </tr>
      <tr
        style={
          Object {
            "height": "10px",
          }
        }
      />
      <tr>
        <td>
          TOTALS
        </td>
        <td>
          $ 0
        </td>
        <td>
          $ 0
        </td>
        <td>
          $ 0
        </td>
      </tr>
      <tr
        style={
          Object {
            "height": "10px",
          }
        }
      />
      <tr
        className="balance-change-value"
      >
        <td>
          Starting
        </td>
        <td
          colSpan={3}
        >
          $ 1000
        </td>
      </tr>
      <tr
        className="balance-change-value"
      >
        <td>
          Net
        </td>
        <td
          colSpan={3}
        >
          $ 0
        </td>
      </tr>
      <tr
        className="balance-change-value"
      >
        <td>
          Final
        </td>
        <td
          colSpan={3}
        >
          $ 1000
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`BetResultsInfo renders winning wheel numbers with different color backgrounds (1 -> red) 1`] = `
<div
  className="BetResultsInfo-component"
>
  <div
    className="bet-info-table-title-container"
  >
    <div
      className="bet-info-table-title-text"
    >
      PREVIOUS ROUND RESULTS
    </div>
    <div
      className="bet-info-table-title-spin-result"
      style={
        Object {
          "backgroundColor": "#d94848",
        }
      }
    >
      1
    </div>
  </div>
  <table
    className="bet-results-info-table"
  >
    <tbody>
      <tr
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        <th>
          Bet Name
        </th>
        <th>
          Bet Amount
        </th>
        <th>
          Winnings
        </th>
        <th>
          Bet Returned
        </th>
      </tr>
      <tr
        style={
          Object {
            "height": "10px",
          }
        }
      />
      <tr>
        <td>
          TOTALS
        </td>
        <td>
          $ 0
        </td>
        <td>
          $ 0
        </td>
        <td>
          $ 0
        </td>
      </tr>
      <tr
        style={
          Object {
            "height": "10px",
          }
        }
      />
      <tr
        className="balance-change-value"
      >
        <td>
          Starting
        </td>
        <td
          colSpan={3}
        >
          $ 1000
        </td>
      </tr>
      <tr
        className="balance-change-value"
      >
        <td>
          Net
        </td>
        <td
          colSpan={3}
        >
          $ 0
        </td>
      </tr>
      <tr
        className="balance-change-value"
      >
        <td>
          Final
        </td>
        <td
          colSpan={3}
        >
          $ 1000
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`BetResultsInfo renders winning wheel numbers with different color backgrounds (2 -> black) 1`] = `
<div
  className="BetResultsInfo-component"
>
  <div
    className="bet-info-table-title-container"
  >
    <div
      className="bet-info-table-title-text"
    >
      PREVIOUS ROUND RESULTS
    </div>
    <div
      className="bet-info-table-title-spin-result"
      style={
        Object {
          "backgroundColor": "#222222",
        }
      }
    >
      2
    </div>
  </div>
  <table
    className="bet-results-info-table"
  >
    <tbody>
      <tr
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        <th>
          Bet Name
        </th>
        <th>
          Bet Amount
        </th>
        <th>
          Winnings
        </th>
        <th>
          Bet Returned
        </th>
      </tr>
      <tr
        style={
          Object {
            "height": "10px",
          }
        }
      />
      <tr>
        <td>
          TOTALS
        </td>
        <td>
          $ 0
        </td>
        <td>
          $ 0
        </td>
        <td>
          $ 0
        </td>
      </tr>
      <tr
        style={
          Object {
            "height": "10px",
          }
        }
      />
      <tr
        className="balance-change-value"
      >
        <td>
          Starting
        </td>
        <td
          colSpan={3}
        >
          $ 1000
        </td>
      </tr>
      <tr
        className="balance-change-value"
      >
        <td>
          Net
        </td>
        <td
          colSpan={3}
        >
          $ 0
        </td>
      </tr>
      <tr
        className="balance-change-value"
      >
        <td>
          Final
        </td>
        <td
          colSpan={3}
        >
          $ 1000
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`BetResultsInfo renders winning wheel numbers with different color backgrounds (undefined -> generic grey) 1`] = `
<div
  className="BetResultsInfo-component"
>
  <div
    className="bet-info-table-title-container"
  >
    <div
      className="bet-info-table-title-text"
    >
      PREVIOUS ROUND RESULTS
    </div>
    <div
      className="bet-info-table-title-spin-result"
      style={
        Object {
          "backgroundColor": "#dfdfdf",
        }
      }
    >
      ?
    </div>
  </div>
  <table
    className="bet-results-info-table"
  >
    <tbody>
      <tr
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        <th>
          Bet Name
        </th>
        <th>
          Bet Amount
        </th>
        <th>
          Winnings
        </th>
        <th>
          Bet Returned
        </th>
      </tr>
      <tr
        style={
          Object {
            "height": "10px",
          }
        }
      />
      <tr>
        <td>
          TOTALS
        </td>
        <td>
          $ 0
        </td>
        <td>
          $ 0
        </td>
        <td>
          $ 0
        </td>
      </tr>
      <tr
        style={
          Object {
            "height": "10px",
          }
        }
      />
      <tr
        className="balance-change-value"
      >
        <td>
          Starting
        </td>
        <td
          colSpan={3}
        >
          $ 1000
        </td>
      </tr>
      <tr
        className="balance-change-value"
      >
        <td>
          Net
        </td>
        <td
          colSpan={3}
        >
          $ 0
        </td>
      </tr>
      <tr
        className="balance-change-value"
      >
        <td>
          Final
        </td>
        <td
          colSpan={3}
        >
          $ 1000
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`BetResultsInfo renders with bets 1`] = `
<div
  className="BetResultsInfo-component"
>
  <div
    className="bet-info-table-title-container"
  >
    <div
      className="bet-info-table-title-text"
    >
      PREVIOUS ROUND RESULTS
    </div>
    <div
      className="bet-info-table-title-spin-result"
      style={
        Object {
          "backgroundColor": "#d94848",
        }
      }
    >
      7
    </div>
  </div>
  <table
    className="bet-results-info-table"
  >
    <tbody>
      <tr
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        <th>
          Bet Name
        </th>
        <th>
          Bet Amount
        </th>
        <th>
          Winnings
        </th>
        <th>
          Bet Returned
        </th>
      </tr>
      <tr>
        <td>
          Even
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ 10
        </td>
        <td />
        <td />
      </tr>
      <tr>
        <td>
          Black
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ 20
        </td>
        <td />
        <td />
      </tr>
      <tr>
        <td>
          1st 12
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ 30
        </td>
        <td>
          $ 60
        </td>
        <td>
          $ 30
        </td>
      </tr>
      <tr
        style={
          Object {
            "height": "10px",
          }
        }
      />
      <tr>
        <td>
          TOTALS
        </td>
        <td>
          $ 60
        </td>
        <td>
          $ 60
        </td>
        <td>
          $ 30
        </td>
      </tr>
      <tr
        style={
          Object {
            "height": "10px",
          }
        }
      />
      <tr
        className="balance-change-value"
      >
        <td>
          Starting
        </td>
        <td
          colSpan={3}
        >
          $ 1000
        </td>
      </tr>
      <tr
        className="balance-change-value"
      >
        <td>
          Net
        </td>
        <td
          colSpan={3}
        >
          $ 30
        </td>
      </tr>
      <tr
        className="balance-change-value"
      >
        <td>
          Final
        </td>
        <td
          colSpan={3}
        >
          $ 1030
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`BetResultsInfo renders with no bets 1`] = `
<div
  className="BetResultsInfo-component"
>
  <div
    className="bet-info-table-title-container"
  >
    <div
      className="bet-info-table-title-text"
    >
      PREVIOUS ROUND RESULTS
    </div>
    <div
      className="bet-info-table-title-spin-result"
      style={
        Object {
          "backgroundColor": "#dfdfdf",
        }
      }
    >
      ?
    </div>
  </div>
  <table
    className="bet-results-info-table"
  >
    <tbody>
      <tr
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        <th>
          Bet Name
        </th>
        <th>
          Bet Amount
        </th>
        <th>
          Winnings
        </th>
        <th>
          Bet Returned
        </th>
      </tr>
      <tr
        style={
          Object {
            "height": "10px",
          }
        }
      />
      <tr>
        <td>
          TOTALS
        </td>
        <td>
          $ 0
        </td>
        <td>
          $ 0
        </td>
        <td>
          $ 0
        </td>
      </tr>
      <tr
        style={
          Object {
            "height": "10px",
          }
        }
      />
      <tr
        className="balance-change-value"
      >
        <td>
          Starting
        </td>
        <td
          colSpan={3}
        />
      </tr>
      <tr
        className="balance-change-value"
      >
        <td>
          Net
        </td>
        <td
          colSpan={3}
        />
      </tr>
      <tr
        className="balance-change-value"
      >
        <td>
          Final
        </td>
        <td
          colSpan={3}
        />
      </tr>
    </tbody>
  </table>
</div>
`;
